<resources>
    <string name="app_name">Aflux</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading">•••</string>

    <!--Fragments-->

    <!--Metadata-->
    <string name="name">Name</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="proceed">Proceed</string>
    <string name="resume">Resume</string>

    <!--Errors-->
    <string name="error_name_empty">Please enter your name</string>
    <string name="error_name_invalid">Please enter your full name</string>
    <string name="error_age_empty">Please enter your age</string>
    <string name="error_age_invalid">Please enter a number</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
